# ros1_ros2_bridge

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml
docker_tool/: docker_build.sh  docker_run.sh  run_1to2.sh  run_2to1.sh
ros1_bridge_ws/src/ros1_bridge/: CMakeLists.txt  package.xml
ros1_bridge_ws/src/ros1_bridge/src/: ros1_bridge_1to2.py  ros1_bridge_2to1.py
ros1_custom_msg/autoware_msgs_ros/: CMakeLists.txt  package.xml
ros2_bridge_ws/src/ros2_bridge/: package.xml  setup.cfg  setup.py
ros2_bridge_ws/src/ros2_bridge/ros2_bridge/: ros2_bridge_1to2.py  ros2_bridge_2to1.py
ros2_custom_msg/autoware_msgs_ros2/: CMakeLists.txt  package.xml
ros2_custom_msg/autoware_msgs_ros2/msg/: LaneWaypointsArray.msg
shell/: .add_bashrc  ros_bridge_1to2.sh  ros_bridge_1to2_kill.sh  ros_bridge_2to1.sh  ros_bridge_2to1_kill.sh
